--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ProjectAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity6"
+            android:name=".FirstActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,22 +21,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity5"
+            android:name=".ChoosseCar"
             android:exported="false" />
         <activity
             android:name=".Suppliers"
             android:exported="false" />
         <activity
-            android:name=".MainActivity4"
+            android:name=".Brand"
             android:exported="false" />
         <activity
-            android:name=".MainActivity3"
+            android:name=".Rental_or_stauts"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".Login"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Registration"
             android:exported="true">
         </activity>
     </application>
