--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,17 @@
         android:theme="@style/Theme.ProjectAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".CarInformationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CarListActivity"
+            android:exported="false" />
+        <activity
             android:name=".FirstActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -37,8 +44,7 @@
             android:exported="false" />
         <activity
             android:name=".Registration"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
